# chiply.dev

./: package-lock.json  package.json  readme.org  svelte.config.js
org/: .dir-locals.el  boilerplate.org  index.org  post0.org  post1.org  pyproject.toml
src/routes/: +layout.svelte  +page.svelte  +page.ts  app.css  index.html
src/routes/[post]/: +page.svelte  +page.ts  Article.svelte  Bibliography.svelte  Footnotes.svelte  Minimap.svelte  Modeline.svelte  Navbar.svelte  ProgressBar.svelte  Tags.svelte  Tldr.svelte  ToC.svelte  index.html  post0.html
src/routes/about/[post]/: +page.svelte  +page.ts  Article.svelte  ArticleNarrow.svelte  Bibliography.svelte  Footnotes.svelte  Graph.svelte  Minimap.svelte  Navbar.svelte  Tags.svelte  Tldr.svelte  ToC.svelte  post0.html  post1.html
